k8s/homelab/08-image-processor.yaml
#k8s/08-image-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-processor
  namespace: kates-closetx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-processor
  template:
    metadata:
      labels:
        app: image-processor
    spec:
      containers:
      - name: image-processor
        image: harbor.javajon.duckdns.org/kates/image-processor:v1.0.0
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
