k8s/homelab/07-ai-advice-service.yaml
#k8s/07-advice-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-advice-service
  namespace: kates-closetx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-advice-service
  template:
    metadata:
      labels:
        app: ai-advice-service
    spec:
      containers:
      - name: ai-advice-service
        image: harbor.javajon.duckdns.org/library/ai-advice-service:v8.0.8
        ports:
        - containerPort: 3004
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ai-advice-service
  namespace: kates-closetx
spec:
  selector:
    app: ai-advice-service
  ports:
  - port: 3004
    targetPort: 3004
  type: ClusterIP
